ticket number: change page title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Reference used:
 
 <!DOCTYPE html>
 <head>
-	<title>7Geese Repository List</title>
+	<title>7Geese Repository List - Mansi version</title>
 	<style>
 		body {
 			font-family: "Times New Roman", Times, serif;
