ticket number - Updated h1 tag contents to mansi version and deleted un-necessary files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Reference used:
 	<!-- repository template-->
     <script type="text/template" id="repotemplate">
 		<!-- title-->
-		<h1>7Geese Repository List</h1>
+		<h1>7Geese Repository List - Mansi Version</h1>
 		
 		<!-- unordered list-->
         <ul>
